--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "devDependencies": {
     "@wordpress/scripts": "^12.1.0",
     "dir-archiver": "^1.1.1",
+    "grunt-autoprefixer": "^3.0.4",
+    "grunt-sass": "^3.1.0",
+    "load-grunt-tasks": "^5.1.0",
     "node-sass": "^4.14.1",
     "rtlcss": "^2.5.0"
   },
@@ -42,5 +45,8 @@
     "lint:scss": "wp-scripts lint-style 'sass/**/*.scss'",
     "lint:js": "wp-scripts lint-js 'js/*.js'",
     "bundle": "dir-archiver --src . --dest ../_s.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map"
+  },
+  "dependencies": {
+    "grunt": "^1.3.0"
   }
 }
